# weather-stats

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  DockerfileMulti  README.md
.github/workflows/: static.yml
docs/weather_stats/: all.html  index.html  sidebar-items.js
docs/weather_stats/config/: index.html
docs/weather_stats/config/config/: fn.load_config_db.html  index.html  sidebar-items.js  struct.Zips.html
docs/weather_stats/db_actions/: index.html  sidebar-items.js
docs/weather_stats/db_actions/db_actions/: fn.connect_to_db.html  fn.get_db_url.html  fn.insert_weather_data.html  index.html  sidebar-items.js
docs/weather_stats/error_handling/: enum.AppError.html  index.html
docs/weather_stats/models/: index.html  sidebar-items.js
docs/weather_stats/models/areas/: enum.Column.html  enum.PrimaryKey.html  enum.Relation.html  index.html  struct.ActiveModel.html  struct.ColumnIter.html  struct.Entity.html  struct.Model.html  struct.PrimaryKeyIter.html  struct.RelationIter.html
docs/weather_stats/openweathermap/: index.html  sidebar-items.js
docs/weather_stats/utils/: index.html  sidebar-items.js
scripts/: SCRIPTS_README.md  build.sh  image_build.sh  init.sql
src/: config.rs  db_actions.rs  error_handling.rs  lib.rs  main.rs  openweathermap.rs  utils.rs  weather_data.rs
src/models/: README.md  areas.rs  mod.rs  targetzips.rs  users.rs  userzips.rs  weather_data.rs  weather_str.rs
src/scripts/: build.sh
src/test-data/: weather-pull-conf.json
tests/: TESTS_README.md  config_tests.rs  db_actions_tests.rs  utils_tests.rs
(+56 files in other folders)
